Bug 120405 - EDITING: Clicking at 'Open' in the concordance file button in the ToC dialog vanishes the 'Edit...' command
Summary: EDITING: Clicking at 'Open' in the concordance file button in the ToC dialog ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium minor
Assignee: Andreas Heinisch
URL:
Whiteboard: target:7.5.0
Keywords: needUITest
Depends on:
Blocks: Concordance-File
  Show dependency treegraph
 
Reported: 2018-10-08 08:42 UTC by Thomas Lendo
Modified: 2022-11-22 08:03 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Lendo 2018-10-08 08:42:01 UTC
Create an alphabetical index and create or assign an Concordance file to it. After clicking at 'Open' instead of 'Edit...' in the 'File' button and after closing the file picker window (because maybe the user has accidentally clicked at it), then the 'Edit...' button is no more available. The user has to close the ToC dialog and open it again to see the 'Edit...' command.

STR:
1. Open or create a Writer document.
2. Insert an alphabetical index: Insert > Table of Contents and Index > Table of Contents, Index or Bibliography...
3. Choose type 'Alphabetical Index'.
4. Check the option 'Concordance file' (if not already checked).
5. Click at the 'File' button.
6. Open or create a Concordance file.
7. Close the ToC dialog with OK.
8. Open the ToC dialog again e.g. with right-click on the alphabetical index ('Edit index').
9. Click at 'Open' in the 'File' button under 'Concordance file' (consider the 3 entries Open, New... and Edit...).
10. Close the opened file picker dialog with close or everything else than OK.
11. Click at the 'File' button again.

Actual result:
'Edit...' command is not available.
(Maybe the connection to the concordance file is lost - I don't know.)

Expected result:
'Edit...' command is still available.
Comment 1 Buovjaga 2018-11-23 18:53:31 UTC
Repro already in 3.3.0 (Win 10)

Arch Linux 64-bit
Version: 6.3.0.0.alpha0+
Build ID: 750ccfb2a60582a5652c08f3cbb6f11d4c152275
CPU threads: 8; OS: Linux 4.19; UI render: default; VCL: gtk3_kde5; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Built on 22 November 2018
Comment 2 QA Administrators 2019-11-24 03:36:37 UTC Comment hidden (noise, obsolete)
Comment 3 Thomas Lendo 2021-07-20 22:10:57 UTC
Still reproducible in
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 113d308155e4b6a67a8510098a7db5f4a6632bdc
CPU threads: 2; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: de-AT (de_AT.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-07-16_21:27:22
Calc: CL
Comment 4 Commit Notification 2022-11-22 08:01:55 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/66e48719c0a58508d75c0204531513541ae6db09

tdf#120405 - Use previously selected file, if selection is aborted

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Andreas Heinisch 2022-11-22 08:03:52 UTC
Unfortunately, the MenutButton behaves very strange during the UITest, so I committed the patch without it. However, in the Patchset 1 is a skeleton of the uitest which can be used in order to test this feature, if the MenuButton functions.