tdf#120405 - Use previously selected file, if selection is aborted

If a user aborts the selection of a concordance file, use the previously selected one, if it exists.

Change-Id: I55547ca98034269e897d6bc86ccc4dcfd63be9fd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142997
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>